2.81 Outliner: selection not synced when editing armature #71404

Closed
opened 2019-11-07 11:49:41 +01:00 by Stanislav Blinov · 9 comments

Blender Version
Broken: 2.8x

Short description of error

I believe this is a remnant from the old outliner, but if the new outliner is supposed to sync selection between itself and 3D view, it looks like a bug.
When adding or deleting bones in armature edit mode, outliner keeps its selection highlighting, irrespective of what's actually selected in 3D view.

Exact steps for others to reproduce the error

outliner_bone_select.blend

  1. Load the .blend
  2. Note the two selected bones, they're also highlighted (selected) in the outliner
  3. Delete these two bones
  4. Note that no bones are selected in 3D view
  5. Note that two other bones became highlighted (selected) in the outliner, even though they're obviously not selected.

From here, ctrl (or shift) clicking another bone in the outliner will update 3D view selection according to what's highlighted in the outliner.

Adding a bone will also not affect outliner selection.

**Blender Version** Broken: 2.8x **Short description of error** I believe this is a remnant from the old outliner, but if the new outliner is supposed to sync selection between itself and 3D view, it looks like a bug. When adding or deleting bones in armature edit mode, outliner keeps its selection highlighting, irrespective of what's actually selected in 3D view. **Exact steps for others to reproduce the error** [outliner_bone_select.blend](https://archive.blender.org/developer/F7973146/outliner_bone_select.blend) 1. Load the .blend 2. Note the two selected bones, they're also highlighted (selected) in the outliner 3. Delete these two bones 4. Note that no bones are selected in 3D view 5. Note that two other bones became highlighted (selected) in the outliner, even though they're obviously not selected. From here, ctrl (or shift) clicking another bone in the outliner will update 3D view selection according to what's highlighted in the outliner. Adding a bone will also not affect outliner selection.

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes
Member

Added subscribers: @natecraddock, @lichtwerk

Added subscribers: @natecraddock, @lichtwerk
Member

Can confirm.

@Zachman : is this something D5817, D5572 are taking care of already?

Can confirm. @Zachman : is this something [D5817](https://archive.blender.org/developer/D5817), [D5572](https://archive.blender.org/developer/D5572) are taking care of already?

So, now it's actual release, and release notes are now actually misleading (s.a. #71290)

So, now it's actual release, and release notes are now actually misleading (s.a. #71290)

@lichtwerk This is a small oversight, and those two tasks you mentioned should take care of it. If not, then it should be a simple fix otherwise.

@Stan_Pancakes I agree, it makes me a bit sad that there are still some issues with the syncing implementation. I do want to fix it, but school has to be my first priority at the moment. I have a holiday later this week and I hope to fix a few things (including this).

@lichtwerk This is a small oversight, and those two tasks you mentioned should take care of it. If not, then it should be a simple fix otherwise. @Stan_Pancakes I agree, it makes me a bit sad that there are still some issues with the syncing implementation. I do want to fix it, but school has to be my first priority at the moment. I have a holiday later this week and I hope to fix a few things (including this).

This issue was referenced by 92d62148be

This issue was referenced by 92d62148bed1cf68ed674b4a9c6ba6440a697ca8

This issue was referenced by c06a40006d

This issue was referenced by c06a40006d6ce6a12eecb63dfe1b8d502efcc4af

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Nathan Craddock self-assigned this 2020-05-02 06:24:37 +02:00

This was resolved by c06a40006d

This was resolved by c06a40006d
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71404
No description provided.