source/blender/editors/armature/armature_relations.c
@@ -58,6 +58,7 @@
 
 #include "ED_armature.h"
 #include "ED_object.h"
+#include "ED_outliner.h"
 #include "ED_screen.h"
 
 #include "UI_interface.h"
@@ -707,6 +708,7 @@ static int separate_armature_exec(bContext *C, wmOperator *op)
 
   if (ok) {
     BKE_report(op->reports, RPT_INFO, "Separated bones");
+    ED_outliner_select_sync_from_object_tag(C);
   }
 
   return OPERATOR_FINISHED;
